--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <header class="bg-white">
   <nav
-    class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8"
+    class="flex items-center justify-between p-6 mx-auto max-w-7xl lg:px-8"
     aria-label="Global"
   >
     <div class="flex lg:flex-1">
       <a href="#" class="-m-1.5 p-1.5">
         <span class="sr-only">Your Company</span>
         <img
-          class="h-8 w-auto"
+          class="w-auto h-8"
           src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
           alt=""
         />
@@ -20,7 +20,7 @@
       >
         <span class="sr-only">Open main menu</span>
         <svg
-          class="h-6 w-6"
+          class="w-6 h-6"
           fill="none"
           viewBox="0 0 24 24"
           stroke-width="1.5"
@@ -39,13 +39,13 @@
       <div class="relative">
         <button
           type="button"
-          class="flex items-center gap-x-1 text-sm font-semibold leading-6 text-gray-900"
+          class="flex items-center text-sm font-semibold leading-6 text-gray-900 gap-x-1"
           aria-expanded="false"
           (click)="handleVerProductos()"
         >
           Desarrollos
           <svg
-            class="h-5 w-5 flex-none text-gray-400"
+            class="flex-none w-5 h-5 text-gray-400"
             viewBox="0 0 20 20"
             fill="currentColor"
             aria-hidden="true"
@@ -69,19 +69,19 @@
             To: "opacity-0 translate-y-1"
         -->
         <div
-          class="absolute -left-8 top-full z-10 mt-3 w-screen max-w-md overflow-hidden rounded-3xl bg-white shadow-lg ring-1 ring-gray-900/5"
+          class="absolute z-10 w-screen max-w-md mt-3 overflow-hidden bg-white shadow-lg -left-8 top-full rounded-3xl ring-1 ring-gray-900/5"
           *ngIf="verProductos"
         >
           <div class="p-4">
             <div
-              class="group relative flex items-center gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50"
-              (click)="redirectToFirmaDetalle()"
+              class="relative flex items-center p-4 text-sm leading-6 rounded-lg group gap-x-6 hover:bg-gray-50"
+              (click)="redirectToFirmaV2()"
             >
               <div
-                class="flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white"
+                class="flex items-center justify-center flex-none rounded-lg h-11 w-11 bg-gray-50 group-hover:bg-white"
               >
                 <svg
-                  class="h-6 w-6 text-gray-600 group-hover:text-indigo-600"
+                  class="w-6 h-6 text-gray-600 group-hover:text-indigo-600"
                   fill="none"
                   viewBox="0 0 24 24"
                   stroke-width="1.5"
@@ -97,11 +97,43 @@
               </div>
               <div class="flex-auto">
                 <a class="block font-semibold text-gray-900">
-                  Firma Digital
+                  Firma Digital V.2
                   <span class="absolute inset-0"></span>
                 </a>
                 <p class="mt-1 text-gray-600">
-                  Puede probar la firma digital con la ADSIB
+                  Firma digital con JACOBITUS con 1 QR
+                </p>
+              </div>
+            </div>
+            <div
+              class="relative flex items-center p-4 text-sm leading-6 rounded-lg group gap-x-6 hover:bg-gray-50"
+              (click)="redirectToFirmaV3()"
+            >
+              <div
+                class="flex items-center justify-center flex-none rounded-lg h-11 w-11 bg-gray-50 group-hover:bg-white"
+              >
+                <svg
+                  class="w-6 h-6 text-gray-600 group-hover:text-indigo-600"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  aria-hidden="true"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33"
+                  />
+                </svg>
+              </div>
+              <div class="flex-auto">
+                <a class="block font-semibold text-gray-900">
+                  Firma Digital V.3
+                  <span class="absolute inset-0"></span>
+                </a>
+                <p class="mt-1 text-gray-600">
+                  Firma digital con JACOBITUS su QR
                 </p>
               </div>
             </div>
@@ -112,7 +144,7 @@
               class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-100"
             >
               <svg
-                class="h-5 w-5 flex-none text-gray-400"
+                class="flex-none w-5 h-5 text-gray-400"
                 viewBox="0 0 20 20"
                 fill="currentColor"
                 aria-hidden="true"
@@ -130,7 +162,7 @@
               class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-100"
             >
               <svg
-                class="h-5 w-5 flex-none text-gray-400"
+                class="flex-none w-5 h-5 text-gray-400"
                 viewBox="0 0 20 20"
                 fill="currentColor"
                 aria-hidden="true"
@@ -165,13 +197,13 @@
     <!-- Background backdrop, show/hide based on slide-over state. -->
     <div class="fixed inset-0 z-10"></div>
     <div
-      class="fixed inset-y-0 right-0 z-10 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
+      class="fixed inset-y-0 right-0 z-10 w-full px-6 py-6 overflow-y-auto bg-white sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
     >
       <div class="flex items-center justify-between">
         <a href="#" class="-m-1.5 p-1.5">
           <span class="sr-only">Your Company</span>
           <img
-            class="h-8 w-auto"
+            class="w-auto h-8"
             src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
             alt=""
           />
@@ -179,7 +211,7 @@
         <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
           <span class="sr-only">Close menu</span>
           <svg
-            class="h-6 w-6"
+            class="w-6 h-6"
             fill="none"
             viewBox="0 0 24 24"
             stroke-width="1.5"
@@ -194,9 +226,9 @@
           </svg>
         </button>
       </div>
-      <div class="mt-6 flow-root">
+      <div class="flow-root mt-6">
         <div class="-my-6 divide-y divide-gray-500/10">
-          <div class="space-y-2 py-6">
+          <div class="py-6 space-y-2">
             <div class="-mx-3">
               <button
                 type="button"
@@ -211,7 +243,7 @@
                   Open: "rotate-180", Closed: ""
                 -->
                 <svg
-                  class="h-5 w-5 flex-none"
+                  class="flex-none w-5 h-5"
                   viewBox="0 0 20 20"
                   fill="currentColor"
                   aria-hidden="true"
@@ -227,54 +259,54 @@
               <div class="mt-2 space-y-2" id="disclosure-1">
                 <a
                   href="#"
-                  class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
                   >Analytics</a
                 >
                 <a
                   href="#"
-                  class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
                   >Engagement</a
                 >
                 <a
                   href="#"
-                  class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
                   >Security</a
                 >
                 <a
                   href="#"
-                  class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
                   >Integrations</a
                 >
                 <a
                   href="#"
-                  class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
                   >Automations</a
                 >
                 <a
                   href="#"
-                  class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
                   >Portafolio</a
                 >
                 <a
                   href="#"
-                  class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
                   >Contact sales</a
                 >
               </div>
             </div>
             <a
               href="#"
-              class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+              class="block px-3 py-2 -mx-3 text-base font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
               >Features</a
             >
             <a
               href="#"
-              class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+              class="block px-3 py-2 -mx-3 text-base font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
               >Marketplace</a
             >
             <a
               href="#"
-              class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+              class="block px-3 py-2 -mx-3 text-base font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
               >Company</a
             >
           </div>
