--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,10 @@
-<header class="bg-white">
-  <nav
-    class="flex items-center justify-between p-6 mx-auto max-w-7xl lg:px-8"
-    aria-label="Global"
-  >
+<header class="bg-white border-b">
+  <nav class="mx-auto max-w-7xl flex items-center justify-between p-6 lg:px-8" aria-label="Global">
+    <!-- Logo a la izquierda -->
     <div class="flex lg:flex-1">
-      <a href="#" class="-m-1.5 p-1.5">
-        <span class="sr-only">Your Company</span>
-        <img
-          class="w-auto h-8"
-          src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-          alt=""
-        />
-      </a>
-    </div>
-    <div class="flex lg:hidden">
-      <button
-        type="button"
-        class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700"
-      >
-        <span class="sr-only">Open main menu</span>
+      <a (click)="redirectToHome()" class="cursor-pointer -m-1.5 p-1.5 flex items-center gap-2">
         <svg
-          class="w-6 h-6"
+          class="w-6 h-6 text-gray-600 group-hover:text-indigo-600"
           fill="none"
           viewBox="0 0 24 24"
           stroke-width="1.5"
@@ -30,297 +14,51 @@
           <path
             stroke-linecap="round"
             stroke-linejoin="round"
-            d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+            d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33"
           />
         </svg>
-      </button>
+        <span class="text-xl font-bold tracking-tight">Jacobitus</span>
+      </a>
     </div>
-    <div class="hidden lg:flex lg:gap-x-12">
-      <div class="relative">
-        <button
-          type="button"
-          class="flex items-center text-sm font-semibold leading-6 text-gray-900 gap-x-1"
-          aria-expanded="false"
-          (click)="handleVerProductos()"
-        >
-          Desarrollos
-          <svg
-            class="flex-none w-5 h-5 text-gray-400"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            aria-hidden="true"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
-              clip-rule="evenodd"
-            />
-          </svg>
-        </button>
 
-        <!--
-          'Product' flyout menu, show/hide based on flyout menu state.
+    <!-- Nav principal -->
+    <div class="hidden lg:flex lg:items-center lg:gap-x-12">
+      <a (click)="redirectToFirmaV2()" class="cursor-pointer text-sm font-semibold leading-6 text-gray-900">
+        Firma Digital V2
+      </a>
 
-          Entering: "transition ease-out duration-200"
-            From: "opacity-0 translate-y-1"
-            To: "opacity-100 translate-y-0"
-          Leaving: "transition ease-in duration-150"
-            From: "opacity-100 translate-y-0"
-            To: "opacity-0 translate-y-1"
-        -->
-        <div
-          class="absolute z-10 w-screen max-w-md mt-3 overflow-hidden bg-white shadow-lg -left-8 top-full rounded-3xl ring-1 ring-gray-900/5"
-          *ngIf="verProductos"
-        >
-          <div class="p-4">
-            <div
-              class="relative flex items-center p-4 text-sm leading-6 rounded-lg group gap-x-6 hover:bg-gray-50"
-              (click)="redirectToFirmaV2()"
-            >
-              <div
-                class="flex items-center justify-center flex-none rounded-lg h-11 w-11 bg-gray-50 group-hover:bg-white"
-              >
-                <svg
-                  class="w-6 h-6 text-gray-600 group-hover:text-indigo-600"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  aria-hidden="true"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33"
-                  />
-                </svg>
-              </div>
-              <div class="flex-auto">
-                <a class="block font-semibold text-gray-900">
-                  Firma Digital V.2
-                  <span class="absolute inset-0"></span>
-                </a>
-                <p class="mt-1 text-gray-600">
-                  Firma digital con JACOBITUS con 1 QR
-                </p>
-              </div>
-            </div>
-            <div
-              class="relative flex items-center p-4 text-sm leading-6 rounded-lg group gap-x-6 hover:bg-gray-50"
-              (click)="redirectToFirmaV3()"
-            >
-              <div
-                class="flex items-center justify-center flex-none rounded-lg h-11 w-11 bg-gray-50 group-hover:bg-white"
-              >
-                <svg
-                  class="w-6 h-6 text-gray-600 group-hover:text-indigo-600"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  aria-hidden="true"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33"
-                  />
-                </svg>
-              </div>
-              <div class="flex-auto">
-                <a class="block font-semibold text-gray-900">
-                  Firma Digital V.3
-                  <span class="absolute inset-0"></span>
-                </a>
-                <p class="mt-1 text-gray-600">
-                  Firma digital con JACOBITUS su QR
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="grid grid-cols-2 divide-x divide-gray-900/5 bg-gray-50">
-            <a
-              href="#"
-              class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-100"
-            >
-              <svg
-                class="flex-none w-5 h-5 text-gray-400"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M2 10a8 8 0 1116 0 8 8 0 01-16 0zm6.39-2.908a.75.75 0 01.766.027l3.5 2.25a.75.75 0 010 1.262l-3.5 2.25A.75.75 0 018 12.25v-4.5a.75.75 0 01.39-.658z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-              Portafolio Digital
-            </a>
-            <a
-              href="#"
-              class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-100"
-            >
-              <svg
-                class="flex-none w-5 h-5 text-gray-400"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M2 3.5A1.5 1.5 0 013.5 2h1.148a1.5 1.5 0 011.465 1.175l.716 3.223a1.5 1.5 0 01-1.052 1.767l-.933.267c-.41.117-.643.555-.48.95a11.542 11.542 0 006.254 6.254c.395.163.833-.07.95-.48l.267-.933a1.5 1.5 0 011.767-1.052l3.223.716A1.5 1.5 0 0118 15.352V16.5a1.5 1.5 0 01-1.5 1.5H15c-1.149 0-2.263-.15-3.326-.43A13.022 13.022 0 012.43 8.326 13.019 13.019 0 012 5V3.5z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-              71214958
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900"
-        >Sobre esta pagina</a
-      >
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900"
-        >Productos</a
-      >
+      <a (click)="redirectToFirmaV3()" class="cursor-pointer text-sm font-semibold leading-6 text-gray-900">
+        Firma Digital V3
+      </a>
     </div>
+
+    <!-- Portafolio a la derecha (link externo) -->
     <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-      <a href="#" class="text-sm font-semibold leading-6 text-gray-900"
-        >Log in <span aria-hidden="true">&rarr;</span></a
+      <a
+        href="https://victordanielquino.netlify.app/"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="cursor-pointer -m-1.5 p-1.5 flex items-center gap-2"
       >
+        <!-- Icono Email -->
+        <svg
+          class="w-6 h-6 text-gray-600 group-hover:text-indigo-600"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          aria-hidden="true"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25H4.5a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0l-9.75 7.5L2.25 6.75m19.5 0A2.25 2.25 0 0019.5 4.5H4.5a2.25 2.25 0 00-2.25 2.25"
+          />
+        </svg>
+        <span class="text-xl font-bold tracking-tight">Portafolio</span>
+      </a>
     </div>
   </nav>
-  <!-- Mobile menu, show/hide based on menu open state. -->
-  <div class="lg:hidden" role="dialog" aria-modal="true">
-    <!-- Background backdrop, show/hide based on slide-over state. -->
-    <div class="fixed inset-0 z-10"></div>
-    <div
-      class="fixed inset-y-0 right-0 z-10 w-full px-6 py-6 overflow-y-auto bg-white sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
-    >
-      <div class="flex items-center justify-between">
-        <a href="#" class="-m-1.5 p-1.5">
-          <span class="sr-only">Your Company</span>
-          <img
-            class="w-auto h-8"
-            src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-            alt=""
-          />
-        </a>
-        <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
-          <span class="sr-only">Close menu</span>
-          <svg
-            class="w-6 h-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            aria-hidden="true"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M6 18L18 6M6 6l12 12"
-            />
-          </svg>
-        </button>
-      </div>
-      <div class="flow-root mt-6">
-        <div class="-my-6 divide-y divide-gray-500/10">
-          <div class="py-6 space-y-2">
-            <div class="-mx-3">
-              <button
-                type="button"
-                class="flex w-full items-center justify-between rounded-lg py-2 pl-3 pr-3.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
-                aria-controls="disclosure-1"
-                aria-expanded="false"
-              >
-                Product
-                <!--
-                  Expand/collapse icon, toggle classes based on menu open state.
-
-                  Open: "rotate-180", Closed: ""
-                -->
-                <svg
-                  class="flex-none w-5 h-5"
-                  viewBox="0 0 20 20"
-                  fill="currentColor"
-                  aria-hidden="true"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-              </button>
-              <!-- 'Product' sub-menu, show/hide based on menu state. -->
-              <div class="mt-2 space-y-2" id="disclosure-1">
-                <a
-                  href="#"
-                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
-                  >Analytics</a
-                >
-                <a
-                  href="#"
-                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
-                  >Engagement</a
-                >
-                <a
-                  href="#"
-                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
-                  >Security</a
-                >
-                <a
-                  href="#"
-                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
-                  >Integrations</a
-                >
-                <a
-                  href="#"
-                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
-                  >Automations</a
-                >
-                <a
-                  href="#"
-                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
-                  >Portafolio</a
-                >
-                <a
-                  href="#"
-                  class="block py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
-                  >Contact sales</a
-                >
-              </div>
-            </div>
-            <a
-              href="#"
-              class="block px-3 py-2 -mx-3 text-base font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
-              >Features</a
-            >
-            <a
-              href="#"
-              class="block px-3 py-2 -mx-3 text-base font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
-              >Marketplace</a
-            >
-            <a
-              href="#"
-              class="block px-3 py-2 -mx-3 text-base font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50"
-              >Company</a
-            >
-          </div>
-          <div class="py-6">
-            <a
-              href="#"
-              class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
-              >Log in</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </header>
 
 <router-outlet></router-outlet>
