--- a/src/app/modules/jacobitus/pages/firma-v2/firma-v2.component.html
+++ b/src/app/modules/jacobitus/pages/firma-v2/firma-v2.component.html
@@ -1,7 +1,36 @@
+<div class="mt-10 mx-auto max-w-7xl px-6 pb-6 lg:px-8">
+  <div class="rounded-xl bg-indigo-50 p-4 md:p-5">
+    <h2 class="text-base md:text-lg font-semibold text-indigo-900">Firma Digital V2</h2>
+    <p class="mt-1 text-sm md:text-base text-indigo-900/80">
+      <strong>La v2 de firma digital con Jacobitus</strong> es una solución de <em>firma digital</em> donde se firman PDF's sin QR pero valido en todo ambiente legal.
+    </p>
+    <br>
+    <span class="mt-1 text-sm md:text-base text-indigo-900/80">
+      <strong>Características:</strong>
+      <ul>
+        <li>Validación criptográfica</li>
+        <li>Sello de tiempo</li>
+        <li>Verificación mediante validador de firmas</li>
+      </ul>
+    </span>
+    <br>
+
+    <span class="mt-1 text-sm md:text-base text-indigo-900/80">
+      <strong>Requimientos:</strong>
+      <ul>
+        <li>Aplicacion Jacobitus corriendo</li>
+        <li>Token</li>
+        <li>Pin</li>
+        <li>PDF</li>
+      </ul>
+    </span>
+  </div>
+</div>
+<!-- Breve descripción bajo la cabecera -->
 <div class="flex flex-col justify-center min-h-full px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <img
-      class="w-auto h-10 mx-auto"
+      class="w-auto h-20 mx-auto"
       src="assets/logo-adsib.png"
       alt="Your Company"
     />
